Nav, header, main & footer working with RWD

--- a/style/partials/body/_header.scss
+++ b/style/partials/body/_header.scss
@@ -8,7 +8,7 @@ header {
         font-weight: 400;
         color: $main-letter-color;
         letter-spacing: 0;
-        //line-height: 2.625em;
+        //line-height: 2.625em;  // not useful with a line break
         max-width: 230px;
 
         span {
