--- a/style/partials/_media-queries.scss
+++ b/style/partials/_media-queries.scss
@@ -1,8 +1,9 @@
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 980px) {
 
+    // -------------------- START TOP NAVBAR --------------------
     .menu-wrap {
-        margin-left: 100px;
-        margin-right: 100px;
+        padding-left: 100px;
+        padding-right: 100px;
         margin-top: 15px;
 
         a {
@@ -19,7 +20,7 @@
         }
 
         nav {
-            position: relative;
+            position: relative; // position the nav
             top: 10px;
             max-height: 50px;
             background-color: transparent;
@@ -38,8 +39,9 @@
                 }
             }
         }
-    }
+    } // -------------------- END TOP NAVBAR --------------------
 
+    // -------------------- START HEADER --------------------
     header {
         margin-left: 200px;
         padding-top: 100px;
@@ -53,11 +55,196 @@
             max-width: 628px;
             height: 48px;
             font-size: 1em;
+            font-weight: 500;
         }
 
         button {
             width: 226px;
             height: 56px;
+        }
+    } // -------------------- END HEADER --------------------
+
+    // -------------------- START MAIN --------------------
+    main {
+
+        // -------------------- START PODCAST SECTION --------------------
+        .podcast-section {
+            height: 1042.6px;
+
+            .podcast-bg-top {
+
+                h2 {
+                    padding-top: 50px;
+                    margin-left: 215px;
+                    font-size: 3em;
+                }
+
+                .embed-container {
+                    flex-flow: row wrap;
+                    padding-right: 30px;
+                    padding-left: 30px;
+
+                    .embed-column {
+                        flex: 50%;
+                        max-width: 50%;
+                        padding-left: 30px;
+                        padding-right: 30px;
+
+                        img {
+                            height: 232px;
+                            margin-top: 45px;
+                        }
+    
+                        .embed-mobile {
+                            display: none; // hide the mobile images
+                        }
+    
+                        .embed-full {
+                            display: inline-flex; // show the full images
+                        }
+                    }
+                }
+            }
+        } // -------------------- END PODCAST SECTION --------------------
+
+        // -------------------- START US SECTION --------------------
+        .us-section {
+
+            .us-container {
+                flex-flow: row wrap;
+                justify-content: space-evenly;
+                margin-bottom: -120px; // because the mobile photo is moved to overflow the top
+
+                .phone-img-column {
+                    flex: 30%;
+                    max-width: 30%;
+                    display: flex;
+                    justify-content: center;
+                    position: relative;
+                    top: -150px;
+                    left: 70px;
+
+                    img {
+                        height: 660px;
+                        max-width: 457.6px;
+                    }
+                }
+
+                .us-column {
+                    flex: 40%;
+                    max-width: 40%;
+                    position: relative;
+                    top: 0;
+
+                    h2 {
+                        font-size: 3em;
+                        max-width: 470px;
+                    }
+
+                    p {
+                        font-size: 1em;
+                        font-weight: 500;
+                        max-width: 470px;
+                    }
+                }
+            }
+        } // -------------------- END US SECTION --------------------
+
+        // -------------------- START PHOTOS SECTION --------------------
+        .photos-section {
+
+            h2 {
+                font-size: 3em;
+                margin-left: 215px;
+                margin-bottom: 30px;
+            }
+
+            .photos-container {
+                flex-direction: row;
+                flex-wrap: nowrap;
+
+                img {
+                    width: 33.33%;
+                }
+            }
+        } // -------------------- END PHOTOS SECTION --------------------
+
+        // -------------------- START TOPICS SECTION --------------------
+        .topics-section {
+
+            h2 {
+                font-size: 3em;
+                margin-left: 215px;
+                margin-bottom: 50px;
+            }
+
+            .topics-container {
+                flex-flow: row wrap;
+                justify-content: center;
+                align-content: center;
+    
+                figure {
+
+                    img {
+                        margin-bottom: 15px;
+                    }
+    
+                    figcaption {
+                        margin-left: 15px;
+                        margin-right: 15px;
+                        max-width: 200px;
+                    }
+
+                    &:nth-child(2) {
+                        margin-bottom: 30px; // restore the 2nd figure
+                    }
+                }
+            }
+        } // -------------------- END TOPICS SECTION --------------------
+
+        // -------------------- START NEWS SECTION --------------------
+        .news-section {
+            height: 518px;
+
+            .news-bg {
+
+                .news-container {
+                    top: 50px;
+                    align-items: center;
+
+                    h2 {
+                        font-size: 3em;
+                    }
+
+                    button {
+                        width: 345px;
+                        height: 56px;
+                        font-size: 1.125em;
+                    }
+                }
+            }
+        } // -------------------- END NEWS SECTION --------------------
+    } // -------------------- END MAIN --------------------
+
+    // -------------------- START FOOTER --------------------
+    footer {
+        flex-direction: row;
+        justify-content: space-between;
+        align-content: center;
+        padding: 30px 60px;
+        
+        .footer-title-container {
+    
+            h3 {
+                font-size: 1em;
+            }
+        }
+    
+        .footer-social-container {
+            margin-top: 0px;
+            justify-content: space-around;
+            width: 300px;
+            align-items: center;
         }
     }
 }
