--- a/style/style.scss
+++ b/style/style.scss
@@ -1,21 +1,27 @@
 /* ---------- Fonts ---------- */
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap');; // IBM Plex Mono R400 & M500
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap'); // IBM Plex Sans R400
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&display=swap'); // IBM Plex Sans R400, M500 & SB600
 
 /* ---------- Variables ---------- */
 @import "./partials/vars";
 
+/* ---------- Variables ---------- */
+@import "./partials/mixins";
+
 /* ---------- Global and Body ---------- */
-@import "./partials/global";
+@import "./partials/body/global";
 
 /* ---------- Nav ---------- */
-@import "./partials/nav";
+@import "./partials/body/nav";
 
 /* ---------- Header ---------- */
-@import "./partials/header";
+@import "./partials/body/header";
 
 /* ---------- Main ---------- */
-@import "./partials/main";
+@import "./partials/body/main";
+
+/* ---------- Footer ---------- */
+@import "./partials/body/footer";
 
 /* ---------- Media queries ---------- */
 @import "./partials/media-queries";
