Add reponsive and dynamic hamburguer menu

--- a/style/partials/_media-queries.scss
+++ b/style/partials/_media-queries.scss
@@ -15,8 +15,15 @@
             }
         }
 
-        .menu-icon {
-            display: none;
+        label {
+            
+            .bars {
+                display: none;
+            }
+
+            .cross {
+                display: none;
+            }
         }
 
         nav {
