--- a/style/partials/body/_nav.scss
+++ b/style/partials/body/_nav.scss
@@ -19,13 +19,68 @@
         }
     }
 
-    .menu-icon {
-        color: black;
-        width: 1.5em;
-        height: 1.5em;
-        line-height: 1.5em;
-        margin-right: -5px;
+    label {
+
+        .bars {
+            display: inline-block;
+            cursor: pointer;
+            margin-top: 5px;
+
+            transform: scale(0.65);
+
+            .bar1, .bar2, .bar3 {
+                width: 35px;
+                height: 5px;
+                background-color: black;
+                margin: 6px 0;
+                transition: 0.4s;
+            }
+        }
+
+        .cross {
+
+            margin-top: 5px;
+            transform: scale(0.65);
+
+            .bar1 {
+                -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+                transform: rotate(-45deg) translate(-9px, 6px);
+            }
+
+            .bar2 {opacity: 0;}
+
+            .bar3 {
+                -webkit-transform: rotate(45deg) translate(-8px, -8px);
+                transform: rotate(45deg) translate(-8px, -8px);
+            }
+        }
     }
+
+    
+      
+      
+      
+      .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+      }
+      
+      .change .bar2 {opacity: 0;}
+      
+      .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+    }
+
+    // .menu-icon {
+    //     color: black;
+    //     width: 1.5em;
+    //     height: 1.5em;
+    //     line-height: 1.5em;
+    //     margin-right: -5px;
+
+    //     cursor: pointer;
+    // }
 
     nav {
         position: absolute;
