Add overflow hidden for background in main

--- a/style/partials/body/_main.scss
+++ b/style/partials/body/_main.scss
@@ -2,7 +2,7 @@ main {
     // -------------------- START PODCAST SECTION --------------------
     .podcast-section {
         height: 1203.5px;
-        //overflow: hidden;
+        overflow: hidden;
 
         .podcast-bg-top {
             background-image: linear-gradient(-90deg, #0000FF 0%, #0000A3 100%);
