Make the navbar fixed

--- a/style/partials/_media-queries.scss
+++ b/style/partials/_media-queries.scss
@@ -4,9 +4,7 @@
     header {
 
         .topnav-container {
-            padding-left: 100px;
-            padding-right: 100px;
-            margin-top: 15px;
+            padding: 30px 100px;
 
             a {
                 width: 2.30em;
@@ -49,7 +47,7 @@
 
         .main-title-container {
             margin-left: 200px;
-            padding-top: 100px;
+            padding-top: 150px;
 
             h1 {
                 max-width: 100%;
