--- a/style/partials/body/_main.scss
+++ b/style/partials/body/_main.scss
@@ -1,8 +1,9 @@
 main {
     // -------------------- START PODCAST SECTION --------------------
     .podcast-section {
-        height: 1203.5px;
+        height: 900px;
         overflow: hidden;
+        scroll-margin-top: 50px; // fix the sticky navbar so it doesn't overlap the titles - same for all reference sections
 
         .podcast-bg-top {
             background-image: linear-gradient(-90deg, #0000FF 0%, #0000A3 100%);
@@ -21,6 +22,7 @@ main {
                 letter-spacing: 0;
                 line-height: 2.625em;
                 margin-left: 15px;
+                margin-bottom: 15px;
                 position: relative;
                 top: 15px;
 
@@ -43,20 +45,14 @@ main {
                     flex: 100%;
                     max-width: 100%;
 
-                    img {
+                    iframe {
                         width: 100%;
-                        height: 225px;
+                        height: 162px;
                         border-radius: 10px;
-                        margin-top: 15px;
                         position: relative; // necesary for the z-index
                         z-index: 10;
                     }
-    
-                    .embed-full {
-                        display: none;
-                    }
                 }
-                
             } 
         } 
 
@@ -76,6 +72,7 @@ main {
     
     // -------------------- START US SECTION --------------------
     .us-section {
+        scroll-margin-top: 50px;
 
         .us-container {
             display: flex;
@@ -114,7 +111,6 @@ main {
                     font-weight: 400;
                     color: $main-letter-color;
                     letter-spacing: 0;
-                    //line-height: 2.625em;
                     margin-bottom: 15px;
                     margin-top: 15px;
                 }
@@ -132,6 +128,7 @@ main {
 
     // -------------------- START PHOTOS SECTION --------------------
     .photos-section {
+        scroll-margin-top: 50px;
 
         h2 {
             font-family: "IBM Plex Sans", sans-serif;
@@ -139,7 +136,6 @@ main {
             font-weight: 400;
             color: $main-letter-color;
             letter-spacing: 0;
-            // line-height: 2.625em;
             margin-left: 15px;
             margin-right: 15px;
             margin-bottom: 15px;
@@ -158,6 +154,7 @@ main {
 
     // -------------------- START TOPICS SECTION --------------------
     .topics-section {
+        scroll-margin-top: 50px;
 
         h2 {
             font-family: "IBM Plex Sans", sans-serif;
@@ -165,7 +162,6 @@ main {
             font-weight: 400;
             color: $main-letter-color;
             letter-spacing: 0;
-            // line-height: 2.625em;
             margin-left: 15px;
             margin-right: 15px;
             margin-bottom: 30px;
@@ -215,6 +211,7 @@ main {
     .news-section {
         height: 341px;
         overflow: hidden;
+        scroll-margin-top: 50px;
 
         .news-bg {
             background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
@@ -245,7 +242,6 @@ main {
                     font-size: 2.25em;
                     color: $white-color;
                     letter-spacing: 0;
-                    //line-height: 2.625em;
                     text-align: center;
                 }
     
